--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
     <div class="categories_bar">
         <div class="categories_container" id="scrollcontainer">
             <div class="category">All</div>
-            <div class="category">Michael J. Knowles</div>
+            <div class="category">Cryptocurrency</div>
             <div class="category">Stocks</div>
-            <div class="category">Debates</div>
+            <div class="category">Frontend</div>
             <div class="category">Science Fiction</div>
             <div class="category">Computer programming</div>
             <div class="category">Music</div>
             <div class="category">Live</div>
             <div class="category">Computer</div>
             <div class="category">Music</div>
-            <div class="category">Shpongle</div>
+            <div class="category">Javascript</div>
             <div class="category">AI</div>
             <div class="category">Gadgets</div>
             <div class="category">Category</div>
